sql/test/unit/checks/simple_named_fail.exp
--no rows
select check(1 > 2) as constraint_name;
^
|
 ----- ERROR
Error: line 2, character 0:
Failed constraint 'constraint_name': 1 > 2
